@@ -17,6 +17,7 @@ Included
 - Added `WEFTEND_360_FAIL_ON_PARTIAL=1` policy support (and helper commands) to force non-zero exit when verify ends in PARTIAL.
 - `verify_360_report.txt` now includes explicit gate-policy and adapter-doctor strict summary lines (`policy.*`, `adapterDoctor.*`) for quick human review.
 - `verify:360:harness` now checks these report lines in pass/replay/fail lanes to prevent report regression.
+- Harness now also proves strict-flag idempotence separation (`NEW` then `REPLAY` under strict-mode context), protecting against replay-key collisions.
 - Policy-enforced PARTIAL exits now print `verify:360 PARTIAL (blocked_by_policy)` and set `interpreted.policy.partialBlockedByPolicy=1` for explicit machine/human signaling.
 - Added `npm run verify:360:release` helper for one-command strict release gating (`adapter doctor strict + fail-on-partial + strict audit`).
 - Strict release helper is intentionally sensitive to existing audit warnings; use isolated `WEFTEND_360_OUT_ROOT` for clean-gate decisions.
